--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <title>Pub de Outro Planeta</title>
 
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="src/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="src/images/favicon.ico" type="image/x-icon">
 
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/responsive.css">
 </head>
 <body>
     <header class="header" id="header">
@@ -201,11 +201,11 @@
         <div class="redes-sociais">
             <p>Nos acompanhe nas nossas redes sociais!</p>
             <a href="#" target="_blank">
-                <img src="./images/face.png" alt="Logo do Facebook" title="Logo do Facebook" class="facebook">
+                <img src="src/images/face.png" alt="Logo do Facebook" title="Logo do Facebook" class="facebook">
             </a>
 
             <a href="#" target="_blank">
-                <img src="./images/insta.png" alt="Logo do Instagram" title="Logo do Instagram" class="instagram">
+                <img src="src/images/insta.png" alt="Logo do Instagram" title="Logo do Instagram" class="instagram">
             </a>
         </div>
     </footer>
